src/Attribution/Attribution.css
.attribution {
  font-size: 1em;
  background-color: #a29bfe;
  min-height: 100vh;
  width: 100vw;
  color: #fff;
  padding-top: 50px;
}

.attribution a {
  color: #fff;
}

.attribution blockquote {
  font-size: 1em;
  border-left: 0.3em solid #fff;
  margin-left: 0;
  padding: 1em;
  width: 100%;
}

.attribution-container {
  max-width: 80%;
  margin: 0 auto;
}

.back {
  text-align: center;
  display: block;
  margin: 0 auto;
  margin-top: 2em;
}

@media only screen and (min-width: 1000px) {
  .attribution {
    font-size: 3em;
  }
  .attribution blockquote {
    font-size: 0.6em;
  }
}

